// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c8 check-coverage allows --check-coverage when executing script 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    95.46 |    76.83 |    89.66 |    95.46 |                   |
 bin                |    85.71 |    83.33 |      100 |    85.71 |                   |
  c8.js             |    85.71 |    83.33 |      100 |    85.71 |    25,32,33,34,35 |
 lib                |     97.1 |       65 |      100 |     97.1 |                   |
  parse-args.js     |    98.41 |    53.85 |      100 |    98.41 |           102,103 |
  report.js         |       96 |    70.37 |      100 |       96 |... 08,134,135,136 |
 lib/commands       |    97.67 |    84.21 |     87.5 |    97.67 |                   |
  check-coverage.js |      100 |    92.86 |      100 |      100 |                17 |
  report.js         |    92.31 |       60 |       50 |    92.31 |              9,10 |
 test/fixtures      |    90.91 |    94.12 |       75 |    90.91 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,ERROR: Coverage for lines (95.46%) does not meet global threshold (101%)
"
`;

exports[`c8 check-coverage allows threshold to be applied on per-file basis 1`] = `
",,ERROR: Coverage for lines (78.33%) does not meet threshold (80%) for lib/commands/check-coverage.js
ERROR: Coverage for lines (76%) does not meet threshold (80%) for test/fixtures/normal.js
"
`;

exports[`c8 check-coverage exits with 0 if coverage within threshold 1`] = `",,"`;

exports[`c8 check-coverage exits with 1 if coverage is below threshold 1`] = `
",,ERROR: Coverage for lines (95.03%) does not meet global threshold (101%)
"
`;

exports[`c8 merges reports from subprocesses together 1`] = `
",first

second

--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    84.67 |    68.18 |    74.07 |    84.67 |                   |
 bin                |    85.71 |    66.67 |      100 |    85.71 |                   |
  c8.js             |    85.71 |    66.67 |      100 |    85.71 |    25,32,33,34,35 |
 lib                |    95.65 |    55.56 |      100 |    95.65 |                   |
  parse-args.js     |    96.83 |    41.67 |      100 |    96.83 |     88,89,102,103 |
  report.js         |    94.67 |     62.5 |      100 |    94.67 |... 08,134,135,136 |
 lib/commands       |    44.19 |    71.43 |    16.67 |    44.19 |                   |
  check-coverage.js |    23.33 |      100 |        0 |    23.33 |... 55,56,57,58,59 |
  report.js         |    92.31 |       60 |       50 |    92.31 |              9,10 |
 test/fixtures      |    90.91 |    94.12 |       75 |    90.91 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 report generates report from existing temporary files 1`] = `
",--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |    95.46 |    79.76 |    89.66 |    95.46 |                   |
 bin                |    85.71 |    85.71 |      100 |    85.71 |                   |
  c8.js             |    85.71 |    85.71 |      100 |    85.71 |    25,32,33,34,35 |
 lib                |     97.1 |    69.05 |      100 |     97.1 |                   |
  parse-args.js     |    98.41 |    53.85 |      100 |    98.41 |           102,103 |
  report.js         |       96 |    75.86 |      100 |       96 |... 08,134,135,136 |
 lib/commands       |    97.67 |    88.89 |     87.5 |    97.67 |                   |
  check-coverage.js |      100 |    92.31 |      100 |      100 |                17 |
  report.js         |    92.31 |       80 |       50 |    92.31 |              9,10 |
 test/fixtures      |    90.91 |    94.12 |       75 |    90.91 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 report supports --check-coverage, when generating reports 1`] = `
",--------------------|----------|----------|----------|----------|-------------------|
File                |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
--------------------|----------|----------|----------|----------|-------------------|
All files           |     95.9 |    79.76 |     93.1 |     95.9 |                   |
 bin                |    85.71 |    83.33 |      100 |    85.71 |                   |
  c8.js             |    85.71 |    83.33 |      100 |    85.71 |    25,32,33,34,35 |
 lib                |     97.1 |    69.05 |      100 |     97.1 |                   |
  parse-args.js     |    98.41 |    53.85 |      100 |    98.41 |           102,103 |
  report.js         |       96 |    75.86 |      100 |       96 |... 08,134,135,136 |
 lib/commands       |      100 |    89.47 |      100 |      100 |                   |
  check-coverage.js |      100 |    92.31 |      100 |      100 |                17 |
  report.js         |      100 |    83.33 |      100 |      100 |                16 |
 test/fixtures      |    90.91 |    94.12 |       75 |    90.91 |                   |
  async.js          |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
  normal.js         |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
  subprocess.js     |      100 |      100 |      100 |      100 |                   |
--------------------|----------|----------|----------|----------|-------------------|
,ERROR: Coverage for lines (95.9%) does not meet global threshold (101%)
"
`;

exports[`c8 reports coverage for script that exits normally 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|----------|----------|----------|----------|-------------------|
File       |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------|----------|----------|----------|----------|-------------------|
All files  |    84.21 |    88.89 |    66.67 |    84.21 |                   |
 async.js  |      100 |      100 |      100 |      100 |                   |
 normal.js |       76 |       75 |    33.33 |       76 | 14,15,16,18,19,20 |
-----------|----------|----------|----------|----------|-------------------|
,"
`;
